# rmig

./: .gitignore  Cargo.toml  config.json.sample  generate.sh  license  readme.md
src/: config.rs  create.rs  enums.rs  init.rs  main.rs  migrations.rs  status.rs  structs.rs
src/drivers/: interface.rs  mod.rs  mysql.rs  postgres.rs
