[package]
name = "rmig"
version = "0.0.1"
authors = ["Brian Seymour <b@bri.io>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
crossterm = "0.16.0"
lazy_static = "1.4.0"
mysql = "17.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
text_io = "0.1.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
