[package]
authors = ["Brian Seymour <b@bri.io>"]
edition = "2018"
name = "rmig"
version = "0.0.2"

[dependencies]
chrono = "0.4.10"
crossterm = "0.16.0"
lazy_static = "1.4.0"
mysql = "17.0.0"
openssl = { version = "0.10", features = ["vendored"] }
postgres = "0.17.1"
serde_json = "1.0.45"
text_io = "0.1.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.104"

[profile]
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
