[package]
authors = ["Brian Seymour <b@bri.io>"]
edition = "2021"
name = "rmig"
version = "0.0.4"

[dependencies]
chrono = "0.4.26"
crossterm = "0.16.0"
lazy_static = "1.4.0"
mysql = "17.0.0"
openssl = { version = "0.10", features = ["vendored"] }
postgres = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text_io = "0.1.8"
